# libsane

./: .travis.yml  CMakeLists.txt  sane.cpp  sane.h  sane_config.cmake  sane_config.h.in  sane_test.cpp  saneparser.rl
.github/workflows/: cmake-macos.yml  cmake-ubuntu.yml
include/sane/: comp.h  complex.h  endian.h  floating_point.h  fpinfo.h  sane.h
src/: floating_point.cpp  fpinfo.cpp  sane.cpp  sane_test.cpp  saneparser.rl
